# ai-review-pipeline

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.ai-review/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: ci.yml  dogfood-light.yml  dogfood.yml  handle-button-action.yml  release.yml
docs/: acceptance-criteria-style.md  discord-tailscale-funnel.md  messaging-bridge.md  project-adoption.md
gh-extension/: gh-ai-review
registry/: MODEL_REGISTRY.env
schema/: config.example.yaml  config.schema.yaml
scripts/: smoke_cli.sh
src/ai_review_pipeline/: __init__.py  auto_fix.py  cli.py  common.py  consensus.py  discord_notify.py  fix_loop.py  issue_context.py  issue_parser.py  metrics.py  metrics_summary.py  models.py  nachfrage.py  preflight.py  scoring.py  telegram_alert.py
src/ai_review_pipeline/registry/: MODEL_REGISTRY.env
src/ai_review_pipeline/stages/: __init__.py  ac_validation.py  code_review.py  cursor_review.py  design_review.py  security_review.py  stage.py
src/ai_review_pipeline/stages/prompts/: code_review.md  cursor_review.md  design_review.md  security_review.md
tests/: test_ac_validation.py  test_auto_fix.py  test_cli.py  test_code_review.py  test_common.py  test_consensus.py  test_cursor_review.py  test_design_review.py  test_discord_notify.py  test_fix_loop.py  test_issue_context.py  test_issue_parser.py  test_metrics.py  test_metrics_summary.py  test_models.py  test_nachfrage.py  test_preflight.py  test_scoring.py  test_security_review.py  test_stage.py  test_wheel_packaging.py
workflows/: README.md  ai-code-review.yml  ai-cursor-review.yml  ai-design-review.yml  ai-review-ac-validation.yml  ai-review-auto-escalate.yml  ai-review-auto-fix.yml  ai-review-consensus.yml  ai-review-nachfrage.yml  ai-review-scope-check.yml  ai-security-review.yml
