[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ai-review-pipeline"
version = "0.1.0"
description = "Multi-stage AI review pipeline with Gherkin AC validation. Extracted from ai-portal."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nico Rimmele", email = "etrox@etrox.de" }]
dependencies = [
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
]

[project.optional-dependencies]
gherkin = ["gherkin-official==29.0.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
]

[project.scripts]
ai-review = "ai_review_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_review_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires external services",
    "slow: takes >1s",
]

[tool.coverage.run]
source = ["src/ai_review_pipeline"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
